# spark

./: .gitignore  Gemfile  INSTALL  LICENSE  MANIFEST  PKG-INFO  README  README.md  _config.yml  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py
docs/: index.md  spark_overview.md  spark_programming_guide.md
docs/agents/: checkpointing.md  configuration.md  cost-tracking.md  error-handling.md  fundamentals.md  index.md  memory.md  reasoning-strategies.md  tools.md
docs/api/: agents.md  core.md  governance.md  index.md  models.md  rpc.md  rsi.md  spec-kit.md  telemetry.md  tools.md
docs/architecture/: agent-system.md  graph-system.md  index.md  node-system.md  rpc-architecture.md  rsi-architecture.md  (+2 more)
examples/: README.md  e001_hello.py  e002_single_llm_call_node.py  e003_simple_flow_graph.py  e004_multiple_translate.py  e005_llm_decider.py  e006_graph_state_counter.py  e006_llm_tool.py  e007_llm_tool.py  e008_rpc_node_basic.py  e009_rpc_node_advanced.py  e010_reasoning_strategies.py  e011_agent_enhancements.py  e011_telemetry.py  e012_streaming_node.py  e018_agent_swarm.py  e023_shell_tool_agent.py  e024_general_shell_tool_agent.py  fake_llm.py
spark/: ReqBase.py  ReqTwisted.py  __init__.py  session.py  spark_admin.py  sprite.py
tests/: README.md  conftest.py
tutorials/: README.md  t01_hello_world.ipynb  t02_batch_processing.ipynb  t03_simple_flow.ipynb  t04_conditional_routing.ipynb  t05_basic_ai_agents.ipynb  t06_agent_config_and_memory.ipynb  t07_tools_extending_agents.ipynb  t08_node_policies.ipynb  t09_multi_agent_workflows.ipynb
(+296 files in other folders)
