[project]
name = "Spark"
version = "0.3.2"
description = "Spark AI Development Kit"
authors = [{ name = "Wensheng Wang", email = "wenshengwang@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
  "pydantic (>=2.7,<3.0)",
  "typing-extensions (>=4.15.0)",
  "json-repair (>=0.52.4)",
  "openai (>=2.7.1)",
  "docstring-parser (>=0.17.0)",
  "jinja2 (>=3.1.6)",
  "starlette (>=0.50.0)",
  "uvicorn (>=0.38.0)",
  "aiohttp (>=3.10.5)",
  "websockets (>=15.0)",
  "aiosqlite (>=0.21.0)"
]

[project.urls]
# Homepage = "https://sparkadk.com/"
# Documentation = "https://doc.sparkadk.com/"
Repository = "https://github.com/wensheng/spark"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = ["-x", "-ra", "--durations=5"]
testpaths = ["tests"]
# remove following filter after pytest upgrade
filterwarnings = [
  "ignore:builtin type (SwigPyPacked|SwigPyObject|swigvarlink) has no __module__ attribute:DeprecationWarning",
]

[tool.black]
line-length = 120
target-version = ['py312']
skip-string-normalization = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"

[tool.pylint.format]
max-line-length = 120
